--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "f92311b7-7e2c-4b5a-b330-70c73fb366fc",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,9 @@
     "    # Parameters initialization.\n",
     "\n",
     "    parameters = initialize_parameters_deep(layers_dims)\n",
-    "        \n",
+    "\n",
+    "    # pos_weight = (Y.shape[1] - np.sum(Y)) / np.sum(Y)\n",
+    "\n",
     "    # Loop (gradient descent)\n",
     "    for i in range(0, num_iterations):\n",
     "\n",
@@ -132,7 +134,8 @@
     "        AL, caches = L_model_forward(X, parameters)\n",
     "                \n",
     "        # Compute cost.\n",
-    "        cost = compute_cost(AL,Y)\n",
+    "        # cost = compute_cost(AL, Y, pos_weight)\n",
+    "        cost = compute_cost(AL, Y)\n",
     "            \n",
     "        # Backward propagation.\n",
     "        grads = L_model_backward(AL, Y, caches)\n",
@@ -147,12 +150,14 @@
     "        if i % 100 == 0:\n",
     "            costs.append(cost)\n",
     "    if X_test is not None and Y_test is not None:\n",
-    "        train_pred = predict(train_x,parameters)\n",
-    "        test_pred = predict(test_x, parameters)\n",
-    "        train_acc = accuracy(train_pred, train_y)\n",
-    "        test_acc = accuracy(test_pred, test_y)\n",
-    "        print(f\"Final train accuracy: {train_acc:.2f}%\")\n",
-    "        print(f\"Final test accuracy:  {test_acc:.2f}%\")\n",
+    "        train_pred = predict(X, parameters)\n",
+    "        test_pred  = predict(X_test, parameters)\n",
+    "    \n",
+    "        train_acc = accuracy(train_pred, Y)\n",
+    "        test_acc  = accuracy(test_pred, Y_test)\n",
+    "    \n",
+    "        print(f\"Final train accuracy: {train_acc*100:.2f}%\")\n",
+    "        print(f\"Final test accuracy:  {test_acc*100:.2f}%\")\n",
     "\n",
     "    \n",
     "    return parameters, costs"
@@ -193,42 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "0aef93d9-a3c3-4753-9565-18590be85cf5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cost after iteration 0: 0.6930917522570549\n",
-      "Cost after iteration 100: 0.65906397134619\n",
-      "Cost after iteration 200: 0.6378383667210833\n",
-      "Cost after iteration 300: 0.6246051040330536\n",
-      "Cost after iteration 400: 0.6164492563653771\n",
-      "Cost after iteration 500: 0.61151739826953\n",
-      "Cost after iteration 600: 0.6085983234176798\n",
-      "Cost after iteration 700: 0.6069058589954726\n",
-      "Cost after iteration 800: 0.6059422094831237\n",
-      "Cost after iteration 900: 0.6054016869150207\n",
-      "Cost after iteration 1000: 0.6051015506843462\n",
-      "Cost after iteration 1100: 0.6049364350963974\n",
-      "Cost after iteration 1200: 0.6048459804984899\n",
-      "Cost after iteration 1300: 0.6047961311912172\n",
-      "Cost after iteration 1400: 0.6047687435257452\n",
-      "Cost after iteration 1500: 0.6047535705047468\n",
-      "Cost after iteration 1600: 0.6047449356789106\n",
-      "Cost after iteration 1700: 0.6047398654965648\n",
-      "Cost after iteration 1800: 0.6047366677864449\n",
-      "Cost after iteration 1900: 0.6047343354177781\n",
-      "Cost after iteration 2000: 0.6047327174935867\n",
-      "Cost after iteration 2100: 0.6047313851273947\n",
-      "Cost after iteration 2200: 0.6047302887812093\n",
-      "Cost after iteration 2300: 0.604729329056248\n",
-      "Cost after iteration 2400: 0.6047284281433372\n",
-      "Cost after iteration 2499: 0.604727564751305\n",
-      "Final train accuracy: 70.71%\n",
-      "Final test accuracy:  74.01%\n"
+     "ename": "NameError",
+     "evalue": "name 'initialize_parameters_deep' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m layers_dims = [\u001b[32m12288\u001b[39m, \u001b[32m64\u001b[39m, \u001b[32m16\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m1\u001b[39m] \n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m parameters, costs = \u001b[43mL_layer_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayers_dims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0.008\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mnum_iterations\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2500\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprint_cost\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtest_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mY_test_org\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 22\u001b[39m, in \u001b[36mL_layer_model\u001b[39m\u001b[34m(X, Y, layers_dims, learning_rate, num_iterations, print_cost, X_test, Y_test)\u001b[39m\n\u001b[32m     18\u001b[39m costs = []                         \u001b[38;5;66;03m# keep track of cost\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# Parameters initialization.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m parameters = \u001b[43minitialize_parameters_deep\u001b[49m(layers_dims)\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Loop (gradient descent)\u001b[39;00m\n\u001b[32m     25\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m0\u001b[39m, num_iterations):\n\u001b[32m     26\u001b[39m \n\u001b[32m     27\u001b[39m     \u001b[38;5;66;03m# Forward propagation: [LINEAR -> RELU]*(L-1) -> LINEAR -> SIGMOID.\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'initialize_parameters_deep' is not defined"
      ]
     }
    ],
@@ -437,70 +420,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5d0e1995-75f0-4655-bb0f-3962cb3d4a0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def L_layer_model_test(X, Y, layers_dims, learning_rate = 0.0075, num_iterations = 3000, print_cost=False, X_test=None, Y_test=None):\n",
-    "    \"\"\"\n",
-    "    Implements a L-layer neural network: [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID.\n",
-    "    \n",
-    "    Arguments:\n",
-    "    X -- input data, of shape (n_x, number of examples)\n",
-    "    Y -- true \"label\" vector (containing 1 if cat, 0 if non-cat), of shape (1, number of examples)\n",
-    "    layers_dims -- list containing the input size and each layer size, of length (number of layers + 1).\n",
-    "    learning_rate -- learning rate of the gradient descent update rule\n",
-    "    num_iterations -- number of iterations of the optimization loop\n",
-    "    print_cost -- if True, it prints the cost every 100 steps\n",
-    "    \n",
-    "    Returns:\n",
-    "    parameters -- parameters learnt by the model. They can then be used to predict.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # np.random.seed(1)\n",
-    "    costs = []                         # keep track of cost\n",
-    "    \n",
-    "    # Parameters initialization.\n",
-    "\n",
-    "    parameters = initialize_parameters_deep(layers_dims)\n",
-    "        \n",
-    "    # Loop (gradient descent)\n",
-    "    for i in range(0, num_iterations):\n",
-    "\n",
-    "        # Forward propagation: [LINEAR -> RELU]*(L-1) -> LINEAR -> SIGMOID.\n",
-    "        AL, caches = L_model_forward(X, parameters)\n",
-    "                \n",
-    "        # Compute cost.\n",
-    "        cost = compute_cost(AL,Y)\n",
-    "            \n",
-    "        # Backward propagation.\n",
-    "        grads = L_model_backward(AL, Y, caches)\n",
-    "        \n",
-    "        # Update parameters.\n",
-    "\n",
-    "        parameters = update_parameters(parameters, grads, learning_rate)\n",
-    "                        \n",
-    "        # Print the cost every 100 iterations and for the last iteration\n",
-    "        if print_cost and (i % 100 == 0 or i == num_iterations - 1):\n",
-    "            print(\"Cost after iteration {}: {}\".format(i, np.squeeze(cost)))\n",
-    "        if i % 100 == 0:\n",
-    "            costs.append(cost)\n",
-    "    if X_test is not None and Y_test is not None:\n",
-    "        train_pred = predict(train_x,parameters)\n",
-    "        test_pred = predict(test_x, parameters)\n",
-    "        train_acc = accuracy(train_pred, train_y)\n",
-    "        test_acc = accuracy(test_pred, test_y)\n",
-    "        print(f\"Final train accuracy: {train_acc:.2f}%\")\n",
-    "        print(f\"Final test accuracy:  {test_acc:.2f}%\")\n",
-    "\n",
-    "    \n",
-    "    return parameters, costs"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "id": "d54f3c20-e57e-4104-900e-be7d738ece83",
    "metadata": {},
@@ -562,101 +481,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "31230664-d945-4fe4-9bc7-4db36a25b9a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def model(X, Y, learning_rate = 0.01, num_iterations = 15000, print_cost = True):\n",
-    "    \"\"\"\n",
-    "    Implements a three-layer neural network: LINEAR->RELU->LINEAR->RELU->LINEAR->SIGMOID.\n",
-    "    \n",
-    "    Arguments:\n",
-    "    X -- input data, of shape (2, number of examples)\n",
-    "    Y -- true \"label\" vector (containing 0 for red dots; 1 for blue dots), of shape (1, number of examples)\n",
-    "    learning_rate -- learning rate for gradient descent \n",
-    "    num_iterations -- number of iterations to run gradient descent\n",
-    "    print_cost -- if True, print the cost every 1000 iterations\n",
-    "    initialization -- flag to choose which initialization to use (\"zeros\",\"random\" or \"he\")\n",
-    "    \n",
-    "    Returns:\n",
-    "    parameters -- parameters learnt by the model\n",
-    "    \"\"\"\n",
-    "        \n",
-    "    grads = {}\n",
-    "    costs = [] # to keep track of the loss\n",
-    "    m = X.shape[1] # number of examples\n",
-    "    layers_dims = [X.shape[0], 10, 5, 1]\n",
-    "    \n",
-    "    # Initialize parameters dictionary.\n",
-    "    parameters = initialize_parameters_he(layers_dims)\n",
-    "\n",
-    "    # Loop (gradient descent)\n",
-    "\n",
-    "    for i in range(num_iterations):\n",
-    "\n",
-    "        # Forward propagation: LINEAR -> RELU -> LINEAR -> RELU -> LINEAR -> SIGMOID.\n",
-    "        a3, cache = forward_propagation(X, parameters)\n",
-    "        \n",
-    "        # Loss\n",
-    "        cost = compute_loss(a3, Y)\n",
-    "\n",
-    "        # Backward propagation.\n",
-    "        grads = backward_propagation(X, Y, cache)\n",
-    "        \n",
-    "        # Update parameters.\n",
-    "        parameters = update_parameters(parameters, grads, learning_rate)\n",
-    "        \n",
-    "        # Print the loss every 1000 iterations\n",
-    "        if print_cost and i % 100 == 0:\n",
-    "            print(\"Cost after iteration {}: {}\".format(i, cost))\n",
-    "            costs.append(cost)\n",
-    "    \n",
-    "    return parameters, costs"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "f1bd266d-00ad-4661-af9a-d1079bb37a24",
+   "id": "e3b44f01-ee7a-4b21-b253-9178d88af658",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after iteration 0: 0.6923651947511786\n",
-      "Cost after iteration 100: 0.6378808738111896\n",
-      "Cost after iteration 200: 0.6161946777409866\n",
-      "Cost after iteration 300: 0.6083934821515206\n",
-      "Cost after iteration 400: 0.6058841508952018\n",
-      "Cost after iteration 500: 0.6051361745942125\n",
-      "Cost after iteration 600: 0.604919835506482\n",
-      "Cost after iteration 700: 0.6048550970290939\n",
-      "Cost after iteration 800: 0.6048321836277536\n",
-      "Cost after iteration 900: 0.604820620399321\n",
-      "Cost after iteration 1000: 0.6048121157884918\n",
-      "Cost after iteration 1100: 0.604804435436787\n",
-      "Cost after iteration 1200: 0.6047969444933171\n",
-      "Cost after iteration 1300: 0.6047895490800469\n",
-      "Cost after iteration 1400: 0.6047821221534945\n",
-      "Cost after iteration 1500: 0.6047747506252882\n",
-      "Cost after iteration 1600: 0.6047673678263213\n",
-      "Cost after iteration 1700: 0.6047600061825225\n",
-      "Cost after iteration 1800: 0.6047525424214062\n",
-      "Cost after iteration 1900: 0.6047451665148872\n"
+      "Train positives: 1847\n",
+      "Train negatives: 765\n",
+      "Test positives: 242\n",
+      "Test negatives: 85\n"
      ]
     }
    ],
    "source": [
-    "layers_dims = [12288, 64, 16, 5, 1] \n",
-    "parameters= model(train_x, train_y, learning_rate = 0.01, num_iterations = 2000, print_cost = True)"
+    "print(\"Train positives:\", int(np.sum(train_y)))\n",
+    "print(\"Train negatives:\", train_y.shape[1] - int(np.sum(train_y)))\n",
+    "\n",
+    "print(\"Test positives:\", int(np.sum(test_y)))\n",
+    "print(\"Test negatives:\", test_y.shape[1] - int(np.sum(test_y)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b99d93a-00ff-4123-ae3c-418c7d482579",
+   "metadata": {},
+   "source": [
+    "# Load balanced data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0f115a72-32bb-4c42-a9ab-9cb38b9cdb5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_set_x flatten shape: (12288, 1671)\n",
+      "train_set_y shape: (1, 1671)\n",
+      "test_set_x flatten shape: (12288, 210)\n",
+      "test_set_y shape: (1, 210)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(\"../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov40_eliminated_flat.h5\", \"r\") as f:\n",
+    "    train_x = f[\"train_x\"][:]   # (12288, m)\n",
+    "    train_y = f[\"train_y\"][:]   # (1, m)\n",
+    "    test_x  = f[\"test_x\"][:]    # (12288, m)\n",
+    "    test_y  = f[\"test_y\"][:]    # (1, m)\n",
+    "\n",
+    "print (\"train_set_x flatten shape: \" + str(train_x.shape))\n",
+    "print (\"train_set_y shape: \" + str(train_y.shape))\n",
+    "print (\"test_set_x flatten shape: \" + str(test_x.shape))\n",
+    "print (\"test_set_y shape: \" + str(test_y.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "66cc8b89-39e2-46d9-a076-999653ad11cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train positives: 906\n",
+      "Train negatives: 765\n",
+      "Test positives: 125\n",
+      "Test negatives: 85\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Train positives:\", int(np.sum(train_y)))\n",
+    "print(\"Train negatives:\", train_y.shape[1] - int(np.sum(train_y)))\n",
+    "\n",
+    "print(\"Test positives:\", int(np.sum(test_y)))\n",
+    "print(\"Test negatives:\", test_y.shape[1] - int(np.sum(test_y)))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83ad4808-2cc9-4ffe-923a-296dbad73c2c",
+   "id": "99dbb79d-d4c0-41d9-8882-0da88bafae60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.6930516365945552\n",
+      "Cost after iteration 100: 0.6898465641698256\n",
+      "Cost after iteration 200: 0.689567735776817\n",
+      "Cost after iteration 300: 0.6895204400889428\n",
+      "Cost after iteration 400: 0.6894905318750008\n"
+     ]
+    }
+   ],
+   "source": [
+    "layers_dims = [12288, 64, 16, 5, 1] \n",
+    "parameters, costs = L_layer_model(train_x, train_y, layers_dims, learning_rate = 0.008,num_iterations = 2500, print_cost = True, X_test=test_x, Y_test=Y_test_org)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eb99c24-5757-42ec-a8e9-b9e4d3e93597",
    "metadata": {},
    "outputs": [],
    "source": []
