--- a/notebooks/03_L_layer_model-Copy1.ipynb
+++ b/notebooks/03_L_layer_model-Copy1.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b9617684-0e0f-44d3-8a2b-af01027a3c8c",
    "metadata": {},
    "outputs": [
@@ -205,34 +205,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after iteration 0: 0.40606203936117047\n",
-      "Cost after iteration 100: 0.42868061249762585\n",
-      "Cost after iteration 200: 0.4487868714200463\n",
-      "Cost after iteration 300: 0.45693217079428844\n",
-      "Cost after iteration 400: 0.45970947014073893\n",
-      "Cost after iteration 500: 0.4605803593548569\n",
-      "Cost after iteration 600: 0.4608911736561531\n",
-      "Cost after iteration 700: 0.4610149602226259\n",
-      "Cost after iteration 800: 0.4610567191577916\n",
-      "Cost after iteration 900: 0.4610665561205566\n",
-      "Cost after iteration 1000: 0.4610697189655372\n",
-      "Cost after iteration 1100: 0.4610738425992954\n",
-      "Cost after iteration 1200: 0.46107243414960986\n",
-      "Cost after iteration 1300: 0.461072363355223\n",
-      "Cost after iteration 1400: 0.46106943788582705\n",
-      "Cost after iteration 1500: 0.4610670750598367\n",
-      "Cost after iteration 1600: 0.4610647190840069\n",
-      "Cost after iteration 1700: 0.46106157820437943\n",
-      "Cost after iteration 1800: 0.4610580083148715\n",
-      "Cost after iteration 1900: 0.4610549502640192\n",
-      "Cost after iteration 2000: 0.46105227320018577\n",
-      "Cost after iteration 2100: 0.46104950952438223\n",
-      "Cost after iteration 2200: 0.46104520742927874\n",
-      "Cost after iteration 2300: 0.4610426979551611\n",
-      "Cost after iteration 2400: 0.4610407703875496\n",
-      "Cost after iteration 2499: 0.46103848695901006\n",
-      "Final train accuracy: 70.71%\n",
-      "Final test accuracy:  74.01%\n"
+      "Cost after iteration 0: 0.40602289445245815\n",
+      "Cost after iteration 100: 0.4161134914694883\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m layers_dims = [\u001b[32m3072\u001b[39m, \u001b[32m256\u001b[39m, \u001b[32m64\u001b[39m, \u001b[32m16\u001b[39m, \u001b[32m1\u001b[39m] \n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# parameters, costs =  model(train_x, train_y, learning_rate = 0.008, num_iterations = 2000, print_cost = True)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m parameters, costs = \u001b[43mL_layer_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayers_dims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0.008\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mnum_iterations\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2500\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprint_cost\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtest_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtest_y\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 36\u001b[39m, in \u001b[36mL_layer_model\u001b[39m\u001b[34m(X, Y, layers_dims, learning_rate, num_iterations, print_cost, X_test, Y_test)\u001b[39m\n\u001b[32m     33\u001b[39m cost = compute_cost(AL, Y, pos_weight)\n\u001b[32m     35\u001b[39m \u001b[38;5;66;03m# Backward propagation.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m grads = \u001b[43mL_model_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAL\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcaches\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     38\u001b[39m \u001b[38;5;66;03m# Update parameters.\u001b[39;00m\n\u001b[32m     40\u001b[39m parameters = update_parameters(parameters, grads, learning_rate)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/../src/L_layer_model_03/L_layer_model_old.py:333\u001b[39m, in \u001b[36mL_model_backward\u001b[39m\u001b[34m(AL, Y, caches)\u001b[39m\n\u001b[32m    330\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mreversed\u001b[39m(\u001b[38;5;28mrange\u001b[39m(L-\u001b[32m1\u001b[39m)):\n\u001b[32m    331\u001b[39m     \u001b[38;5;66;03m# lth layer: (RELU -> LINEAR) gradients.\u001b[39;00m\n\u001b[32m    332\u001b[39m     current_cache = caches[l]\n\u001b[32m--> \u001b[39m\u001b[32m333\u001b[39m     dA_prev_temp, dW_temp, db_temp = \u001b[43mlinear_activation_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrads\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdA\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurrent_cache\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactivation\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrelu\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    334\u001b[39m     grads[\u001b[33m\"\u001b[39m\u001b[33mdA\u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(l)] = dA_prev_temp\n\u001b[32m    335\u001b[39m     grads[\u001b[33m\"\u001b[39m\u001b[33mdW\u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(l + \u001b[32m1\u001b[39m)] = dW_temp\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/../src/L_layer_model_03/L_layer_model_old.py:290\u001b[39m, in \u001b[36mlinear_activation_backward\u001b[39m\u001b[34m(dA, cache, activation)\u001b[39m\n\u001b[32m    288\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m activation == \u001b[33m\"\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    289\u001b[39m     dZ = relu_backward(dA, activation_cache)\n\u001b[32m--> \u001b[39m\u001b[32m290\u001b[39m     dA_prev, dW, db = \u001b[43mlinear_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinear_cache\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    292\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m activation == \u001b[33m\"\u001b[39m\u001b[33msigmoid\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    293\u001b[39m     dZ = sigmoid_backward(dA, activation_cache)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/../src/L_layer_model_03/L_layer_model_old.py:264\u001b[39m, in \u001b[36mlinear_backward\u001b[39m\u001b[34m(dZ, cache)\u001b[39m\n\u001b[32m    262\u001b[39m dW = \u001b[32m1.\u001b[39m/m * np.dot(dZ,A_prev.T)\n\u001b[32m    263\u001b[39m db = \u001b[32m1.\u001b[39m/m * np.sum(dZ, axis = \u001b[32m1\u001b[39m, keepdims = \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m264\u001b[39m dA_prev = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mW\u001b[49m\u001b[43m.\u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdZ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    266\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m (dA_prev.shape == A_prev.shape)\n\u001b[32m    267\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m (dW.shape == W.shape)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
