generate eidseg_32x32_destroyed_cov40_eliminated

--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "99dbb79d-d4c0-41d9-8882-0da88bafae60",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,23 @@
       "Cost after iteration 100: 0.6898465641698256\n",
       "Cost after iteration 200: 0.689567735776817\n",
       "Cost after iteration 300: 0.6895204400889428\n",
-      "Cost after iteration 400: 0.6894905318750008\n"
+      "Cost after iteration 400: 0.6894905318750008\n",
+      "Cost after iteration 500: 0.6894618126940789\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m layers_dims = [\u001b[32m12288\u001b[39m, \u001b[32m64\u001b[39m, \u001b[32m16\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m1\u001b[39m] \n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m parameters, costs = \u001b[43mL_layer_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayers_dims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0.008\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mnum_iterations\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2500\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprint_cost\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtest_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mY_test_org\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 37\u001b[39m, in \u001b[36mL_layer_model\u001b[39m\u001b[34m(X, Y, layers_dims, learning_rate, num_iterations, print_cost, X_test, Y_test)\u001b[39m\n\u001b[32m     34\u001b[39m cost = compute_cost(AL, Y)\n\u001b[32m     36\u001b[39m \u001b[38;5;66;03m# Backward propagation.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m37\u001b[39m grads = \u001b[43mL_model_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAL\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcaches\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# Update parameters.\u001b[39;00m\n\u001b[32m     41\u001b[39m parameters = update_parameters(parameters, grads, learning_rate)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/../src/L_layer_model_03/L_layer_model.py:331\u001b[39m, in \u001b[36mL_model_backward\u001b[39m\u001b[34m(AL, Y, caches)\u001b[39m\n\u001b[32m    328\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mreversed\u001b[39m(\u001b[38;5;28mrange\u001b[39m(L-\u001b[32m1\u001b[39m)):\n\u001b[32m    329\u001b[39m     \u001b[38;5;66;03m# lth layer: (RELU -> LINEAR) gradients.\u001b[39;00m\n\u001b[32m    330\u001b[39m     current_cache = caches[l]\n\u001b[32m--> \u001b[39m\u001b[32m331\u001b[39m     dA_prev_temp, dW_temp, db_temp = \u001b[43mlinear_activation_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrads\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdA\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurrent_cache\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactivation\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrelu\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    332\u001b[39m     grads[\u001b[33m\"\u001b[39m\u001b[33mdA\u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(l)] = dA_prev_temp\n\u001b[32m    333\u001b[39m     grads[\u001b[33m\"\u001b[39m\u001b[33mdW\u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(l + \u001b[32m1\u001b[39m)] = dW_temp\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/../src/L_layer_model_03/L_layer_model.py:288\u001b[39m, in \u001b[36mlinear_activation_backward\u001b[39m\u001b[34m(dA, cache, activation)\u001b[39m\n\u001b[32m    286\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m activation == \u001b[33m\"\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    287\u001b[39m     dZ = relu_backward(dA, activation_cache)\n\u001b[32m--> \u001b[39m\u001b[32m288\u001b[39m     dA_prev, dW, db = \u001b[43mlinear_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinear_cache\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    290\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m activation == \u001b[33m\"\u001b[39m\u001b[33msigmoid\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    291\u001b[39m     dZ = sigmoid_backward(dA, activation_cache)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/../src/L_layer_model_03/L_layer_model.py:260\u001b[39m, in \u001b[36mlinear_backward\u001b[39m\u001b[34m(dZ, cache)\u001b[39m\n\u001b[32m    257\u001b[39m A_prev, W, b = cache\n\u001b[32m    258\u001b[39m m = A_prev.shape[\u001b[32m1\u001b[39m]\n\u001b[32m--> \u001b[39m\u001b[32m260\u001b[39m dW = \u001b[32m1.\u001b[39m/m * \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43mA_prev\u001b[49m\u001b[43m.\u001b[49m\u001b[43mT\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    261\u001b[39m db = \u001b[32m1.\u001b[39m/m * np.sum(dZ, axis = \u001b[32m1\u001b[39m, keepdims = \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    262\u001b[39m dA_prev = np.dot(W.T,dZ)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
