--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "d01ecebc-c031-4585-84bc-c386bf069372",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import h5py \n",
     "import sys\n",
     "sys.path.append(\"../src\")\n",
-    "from L_layer_model_03.L_layer_model_old import *"
+    "from L_layer_model_03.L_layer_model import *"
    ]
   },
   {
