tensorflow model added

--- a/notebooks/5_final_model.ipynb
+++ b/notebooks/5_final_model.ipynb
@@ -7,6 +7,110 @@
    "source": [
     "to implemet later"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e32ae6e7-e938-4cd2-9415-34e2e8c229fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "import numpy as np\n",
+    "import h5py \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e612842-ca68-4ebe-b1a1-289eae8b1196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(\"../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\", \"r\") as f:\n",
+    "    X_train = f[\"X_train\"][:]\n",
+    "    Y_train = f[\"Y_train\"][:]\n",
+    "    X_test  = f[\"X_test\"][:]\n",
+    "    Y_test  = f[\"Y_test\"][:]\n",
+    "\n",
+    "m_train = X_train_org.shape[0]\n",
+    "m_test = X_test_org.shape[0]\n",
+    "num_px =X_train_org.shape[1]\n",
+    "\n",
+    "print (\"Number of training examples: m_train = \" + str(m_train))\n",
+    "print (\"Number of testing examples: m_test = \" + str(m_test))\n",
+    "print (\"Height/Width of each image: num_px = \" + str(num_px))\n",
+    "print (\"Each image is of size: (\" + str(num_px) + \", \" + str(num_px) + \", 3)\")\n",
+    "print (\"train_set_x shape: \" + str(X_train_org.shape))\n",
+    "print (\"train_set_y shape: \" + str(Y_train_org.shape))\n",
+    "print (\"test_set_x shape: \" + str(X_test_org.shape))\n",
+    "print (\"test_set_y shape: \" + str(Y_test_org.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41ad2550-a5de-4d9f-b59e-e550143cc099",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train_set_x.astype('float32') / 255.0\n",
+    "X_test = test_set_x.astype('float32') / 255.0\n",
+    "\n",
+    "\n",
+    "# Flatten images: (m, 64*64*3)\n",
+    "X_train = X_train.reshape(X_train.shape[0], -1)\n",
+    "X_test = X_test.reshape(X_test.shape[0], -1)\n",
+    "\n",
+    "\n",
+    "Y_train = train_set_y.reshape(-1, 1)\n",
+    "Y_test = test_set_y.reshape(-1, 1)\n",
+    "\n",
+    "\n",
+    "input_dim = X_train.shape[1] # 64*64*3 = 12288\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "537cceae-b729-436c-86a4-1f30a6ae3821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.Sequential([\n",
+    "    layers.Input(shape=(input_dim,)),\n",
+    "    \n",
+    "    \n",
+    "    layers.Dense(256, activation='relu'),\n",
+    "    layers.Dense(128, activation='relu'),\n",
+    "    layers.Dense(64, activation='relu'),\n",
+    "    \n",
+    "    \n",
+    "    layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b58aa146-0f5a-4ad3-a3ce-f9de742e8009",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# ----------------------------\n",
+    "# Compile\n",
+    "# ----------------------------\n",
+    "model.compile(\n",
+    "optimizer=tf.keras.optimizers.Adam(learning_rate=1e-3),\n",
+    "loss='binary_crossentropy',\n",
+    "metrics=['accuracy']\n",
+    ")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
