--- a/notebooks/02_CNN_models/Model01.ipynb
+++ b/notebooks/02_CNN_models/Model01.ipynb
@@ -6,7 +6,66 @@
    "id": "34b23632-1588-4580-b055-a62b8c04320a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with h5py.File(\"../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\", \"r\") as f:\n",
+    "    X_train_org = f[\"X_train\"][:]\n",
+    "    Y_train_org = f[\"Y_train\"][:]\n",
+    "    X_test_org  = f[\"X_test\"][:]\n",
+    "    Y_test_org  = f[\"Y_test\"][:]\n",
+    "\n",
+    "m_train = X_train_org.shape[0]\n",
+    "m_test = X_test_org.shape[0]\n",
+    "num_px =X_train_org.shape[1]\n",
+    "\n",
+    "print (\"Number of training examples: m_train = \" + str(m_train))\n",
+    "print (\"Number of testing examples: m_test = \" + str(m_test))\n",
+    "print (\"Height/Width of each image: num_px = \" + str(num_px))\n",
+    "print (\"Each image is of size: (\" + str(num_px) + \", \" + str(num_px) + \", 3)\")\n",
+    "print (\"train_set_x shape: \" + str(X_train_org.shape))\n",
+    "print (\"train_set_y shape: \" + str(Y_train_org.shape))\n",
+    "print (\"test_set_x shape: \" + str(X_test_org.shape))\n",
+    "print (\"test_set_y shape: \" + str(Y_test_org.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fefbb92d-6ab3-4438-aea3-fe486c201ffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def building_damage_model():\n",
+    "\n",
+    "    model = tf.keras.Sequential([\n",
+    "        # Input + first convolution block\n",
+    "        tf.keras.layers.Conv2D(\n",
+    "            filters=32,\n",
+    "            kernel_size=(3, 3),\n",
+    "            strides=1,\n",
+    "            padding='same',\n",
+    "            activation='relu',\n",
+    "            input_shape=(64, 64, 3)\n",
+    "        ),\n",
+    "        tf.keras.layers.MaxPool2D(pool_size=(2, 2), strides=2),\n",
+    "\n",
+    "        # Second convolution block\n",
+    "        tf.keras.layers.Conv2D(\n",
+    "            filters=64,\n",
+    "            kernel_size=(3, 3),\n",
+    "            strides=1,\n",
+    "            padding='same',\n",
+    "            activation='relu'\n",
+    "        ),\n",
+    "        tf.keras.layers.MaxPool2D(pool_size=(2, 2), strides=2),\n",
+    "\n",
+    "        # Classifier\n",
+    "        tf.keras.layers.Flatten(),\n",
+    "        tf.keras.layers.Dense(64, activation='relu'),\n",
+    "        tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "\n",
+    "    return model\n"
+   ]
   }
  ],
  "metadata": {
