something wrong with tf

--- a/notebooks/02_CNN_models/Model01.ipynb
+++ b/notebooks/02_CNN_models/Model01.ipynb
@@ -2,12 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "34b23632-1588-4580-b055-a62b8c04320a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File(\"../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\", \"r\") as f:\n",
+    "import h5py \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cef4d1ba-5441-4199-932d-ea653cf15a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples: m_train = 2612\n",
+      "Number of testing examples: m_test = 327\n",
+      "Height/Width of each image: num_px = 64\n",
+      "Each image is of size: (64, 64, 3)\n",
+      "train_set_x shape: (2612, 64, 64, 3)\n",
+      "train_set_y shape: (1, 2612)\n",
+      "test_set_x shape: (327, 64, 64, 3)\n",
+      "test_set_y shape: (1, 327)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(\"../../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\", \"r\") as f:\n",
     "    X_train_org = f[\"X_train\"][:]\n",
     "    Y_train_org = f[\"Y_train\"][:]\n",
     "    X_test_org  = f[\"X_test\"][:]\n",
@@ -29,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fefbb92d-6ab3-4438-aea3-fe486c201ffd",
    "metadata": {},
    "outputs": [],
@@ -65,6 +90,57 @@
     "    ])\n",
     "\n",
     "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "34c71e3e-6ccc-400c-97ae-dda76b52d7b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mbuilding_damage_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m model.compile(\n\u001b[32m      4\u001b[39m     optimizer=\u001b[33m'\u001b[39m\u001b[33madam\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      5\u001b[39m     loss=\u001b[33m'\u001b[39m\u001b[33mbinary_crossentropy\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      6\u001b[39m     metrics=[\u001b[33m'\u001b[39m\u001b[33maccuracy\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      7\u001b[39m )\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mbuilding_damage_model\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbuilding_damage_model\u001b[39m():\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     model = \u001b[43mtf\u001b[49m.keras.Sequential([\n\u001b[32m      4\u001b[39m         \u001b[38;5;66;03m# Input + first convolution block\u001b[39;00m\n\u001b[32m      5\u001b[39m         tf.keras.layers.Conv2D(\n\u001b[32m      6\u001b[39m             filters=\u001b[32m32\u001b[39m,\n\u001b[32m      7\u001b[39m             kernel_size=(\u001b[32m3\u001b[39m, \u001b[32m3\u001b[39m),\n\u001b[32m      8\u001b[39m             strides=\u001b[32m1\u001b[39m,\n\u001b[32m      9\u001b[39m             padding=\u001b[33m'\u001b[39m\u001b[33msame\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     10\u001b[39m             activation=\u001b[33m'\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     11\u001b[39m             input_shape=(\u001b[32m64\u001b[39m, \u001b[32m64\u001b[39m, \u001b[32m3\u001b[39m)\n\u001b[32m     12\u001b[39m         ),\n\u001b[32m     13\u001b[39m         tf.keras.layers.MaxPool2D(pool_size=(\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m), strides=\u001b[32m2\u001b[39m),\n\u001b[32m     14\u001b[39m \n\u001b[32m     15\u001b[39m         \u001b[38;5;66;03m# Second convolution block\u001b[39;00m\n\u001b[32m     16\u001b[39m         tf.keras.layers.Conv2D(\n\u001b[32m     17\u001b[39m             filters=\u001b[32m64\u001b[39m,\n\u001b[32m     18\u001b[39m             kernel_size=(\u001b[32m3\u001b[39m, \u001b[32m3\u001b[39m),\n\u001b[32m     19\u001b[39m             strides=\u001b[32m1\u001b[39m,\n\u001b[32m     20\u001b[39m             padding=\u001b[33m'\u001b[39m\u001b[33msame\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     21\u001b[39m             activation=\u001b[33m'\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     22\u001b[39m         ),\n\u001b[32m     23\u001b[39m         tf.keras.layers.MaxPool2D(pool_size=(\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m), strides=\u001b[32m2\u001b[39m),\n\u001b[32m     24\u001b[39m \n\u001b[32m     25\u001b[39m         \u001b[38;5;66;03m# Classifier\u001b[39;00m\n\u001b[32m     26\u001b[39m         tf.keras.layers.Flatten(),\n\u001b[32m     27\u001b[39m         tf.keras.layers.Dense(\u001b[32m64\u001b[39m, activation=\u001b[33m'\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m'\u001b[39m),\n\u001b[32m     28\u001b[39m         tf.keras.layers.Dense(\u001b[32m1\u001b[39m, activation=\u001b[33m'\u001b[39m\u001b[33msigmoid\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     29\u001b[39m     ])\n\u001b[32m     31\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
+      "\u001b[31mNameError\u001b[39m: name 'tf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "model = building_damage_model()\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss='binary_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9e8ac21-b106-426d-b887-e77ad449a911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_train = Y_train_org.reshape(-1)\n",
+    "Y_test  = Y_test_org.reshape(-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93f5dfdd-1a69-43df-a6b7-a6ef474ca952",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train_org / 255.0\n",
+    "X_test  = X_test_org / 255.0\n"
    ]
   }
  ],
