--- a/notebooks/02_CNN_models/Model01.ipynb
+++ b/notebooks/02_CNN_models/Model01.ipynb
@@ -2,17 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "34b23632-1588-4580-b055-a62b8c04320a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-01-27 15:17:21.739391: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2026-01-27 15:17:21.810125: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2026-01-27 15:17:22.302329: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2026-01-27 15:17:24.808189: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
-    "import h5py \n"
+    "import h5py \n",
+    "import tensorflow as tf\n",
+    "import tensorflow.keras.layers as tfl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "cef4d1ba-5441-4199-932d-ea653cf15a3a",
    "metadata": {},
    "outputs": [
