--- a/notebooks/00_data/0_load_data.ipynb
+++ b/notebooks/00_data/0_load_data.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 1,
    "id": "18910a1f-cd3d-4106-a96f-eb9267529cb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Load_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      5\u001b[39m sys.path.append(\u001b[33m\"\u001b[39m\u001b[33m../src\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mLoad_data\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprepare_data\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'Load_data'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
