--- a/notebooks/02_CNN_models/Model01.ipynb
+++ b/notebooks/02_CNN_models/Model01.ipynb
@@ -2,31 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "34b23632-1588-4580-b055-a62b8c04320a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2026-01-27 15:17:21.739391: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2026-01-27 15:17:21.810125: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2026-01-27 15:17:22.302329: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2026-01-27 15:17:24.808189: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     }
    ],
    "source": [
     "import h5py \n",
     "import tensorflow as tf\n",
-    "import tensorflow.keras.layers as tfl"
+    "import tensorflow.keras.layers as tfl\n",
+    "print(tf.config.list_physical_devices('GPU'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "cef4d1ba-5441-4199-932d-ea653cf15a3a",
    "metadata": {},
    "outputs": [
@@ -68,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "fefbb92d-6ab3-4438-aea3-fe486c201ffd",
    "metadata": {},
    "outputs": [],
@@ -108,20 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "34c71e3e-6ccc-400c-97ae-dda76b52d7b1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mbuilding_damage_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m model.compile(\n\u001b[32m      4\u001b[39m     optimizer=\u001b[33m'\u001b[39m\u001b[33madam\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      5\u001b[39m     loss=\u001b[33m'\u001b[39m\u001b[33mbinary_crossentropy\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      6\u001b[39m     metrics=[\u001b[33m'\u001b[39m\u001b[33maccuracy\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      7\u001b[39m )\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mbuilding_damage_model\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbuilding_damage_model\u001b[39m():\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     model = \u001b[43mtf\u001b[49m.keras.Sequential([\n\u001b[32m      4\u001b[39m         \u001b[38;5;66;03m# Input + first convolution block\u001b[39;00m\n\u001b[32m      5\u001b[39m         tf.keras.layers.Conv2D(\n\u001b[32m      6\u001b[39m             filters=\u001b[32m32\u001b[39m,\n\u001b[32m      7\u001b[39m             kernel_size=(\u001b[32m3\u001b[39m, \u001b[32m3\u001b[39m),\n\u001b[32m      8\u001b[39m             strides=\u001b[32m1\u001b[39m,\n\u001b[32m      9\u001b[39m             padding=\u001b[33m'\u001b[39m\u001b[33msame\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     10\u001b[39m             activation=\u001b[33m'\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     11\u001b[39m             input_shape=(\u001b[32m64\u001b[39m, \u001b[32m64\u001b[39m, \u001b[32m3\u001b[39m)\n\u001b[32m     12\u001b[39m         ),\n\u001b[32m     13\u001b[39m         tf.keras.layers.MaxPool2D(pool_size=(\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m), strides=\u001b[32m2\u001b[39m),\n\u001b[32m     14\u001b[39m \n\u001b[32m     15\u001b[39m         \u001b[38;5;66;03m# Second convolution block\u001b[39;00m\n\u001b[32m     16\u001b[39m         tf.keras.layers.Conv2D(\n\u001b[32m     17\u001b[39m             filters=\u001b[32m64\u001b[39m,\n\u001b[32m     18\u001b[39m             kernel_size=(\u001b[32m3\u001b[39m, \u001b[32m3\u001b[39m),\n\u001b[32m     19\u001b[39m             strides=\u001b[32m1\u001b[39m,\n\u001b[32m     20\u001b[39m             padding=\u001b[33m'\u001b[39m\u001b[33msame\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     21\u001b[39m             activation=\u001b[33m'\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     22\u001b[39m         ),\n\u001b[32m     23\u001b[39m         tf.keras.layers.MaxPool2D(pool_size=(\u001b[32m2\u001b[39m, \u001b[32m2\u001b[39m), strides=\u001b[32m2\u001b[39m),\n\u001b[32m     24\u001b[39m \n\u001b[32m     25\u001b[39m         \u001b[38;5;66;03m# Classifier\u001b[39;00m\n\u001b[32m     26\u001b[39m         tf.keras.layers.Flatten(),\n\u001b[32m     27\u001b[39m         tf.keras.layers.Dense(\u001b[32m64\u001b[39m, activation=\u001b[33m'\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m'\u001b[39m),\n\u001b[32m     28\u001b[39m         tf.keras.layers.Dense(\u001b[32m1\u001b[39m, activation=\u001b[33m'\u001b[39m\u001b[33msigmoid\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     29\u001b[39m     ])\n\u001b[32m     31\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
-      "\u001b[31mNameError\u001b[39m: name 'tf' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ahmed/miniconda3/envs/tf/lib/python3.10/site-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
+      "2026-02-01 13:36:46.298419: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-01 13:36:46.301634: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-01 13:36:46.304083: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-01 13:36:46.638029: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-01 13:36:46.640433: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-01 13:36:46.642271: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-01 13:36:46.644217: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1928] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2157 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1650, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
