added data loader

--- a/notebooks/02_CNN_models/Untitled.ipynb
+++ b/notebooks/02_CNN_models/Untitled.ipynb
@@ -18,7 +18,9 @@
     "from resnets_utils import *\n",
     "from tensorflow.keras.initializers import random_uniform, glorot_uniform, constant, identity\n",
     "from tensorflow.python.framework.ops import EagerTensor\n",
-    "from matplotlib.pyplot import imshow\n"
+    "from matplotlib.pyplot import imshow\n",
+    "\n",
+    "import h5py \n"
    ]
   },
   {
@@ -228,6 +230,33 @@
     "    model = Model(inputs = X_input, outputs = X)\n",
     "\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "229ff11e-dd10-4e8f-9daf-779bcf379b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(\"../../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\", \"r\") as f:\n",
+    "    X_train_org = f[\"X_train\"][:]\n",
+    "    Y_train_org = f[\"Y_train\"][:]\n",
+    "    X_test_org  = f[\"X_test\"][:]\n",
+    "    Y_test_org  = f[\"Y_test\"][:]\n",
+    "\n",
+    "m_train = X_train_org.shape[0]\n",
+    "m_test = X_test_org.shape[0]\n",
+    "num_px =X_train_org.shape[1]\n",
+    "\n",
+    "print (\"Number of training examples: m_train = \" + str(m_train))\n",
+    "print (\"Number of testing examples: m_test = \" + str(m_test))\n",
+    "print (\"Height/Width of each image: num_px = \" + str(num_px))\n",
+    "print (\"Each image is of size: (\" + str(num_px) + \", \" + str(num_px) + \", 3)\")\n",
+    "print (\"train_set_x shape: \" + str(X_train_org.shape))\n",
+    "print (\"train_set_y shape: \" + str(Y_train_org.shape))\n",
+    "print (\"test_set_x shape: \" + str(X_test_org.shape))\n",
+    "print (\"test_set_y shape: \" + str(Y_test_org.shape))"
    ]
   }
  ],
